--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Nerko+O
         ne&family=Pacifico&family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/kaspar.css">
-    <title>KAspar | Templet 2</title>
+    <title>Kaspar | Templet2</title>
 </head>
 
 <body>
