--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="overlay"></div>
         <div class="text">
             <div class="content">
-                <h2>Hello Worled! <br>
+                <h2>Hello World! <br>
                     We Are Kaspar We Mack Art</h2>
                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit
                     aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan
