--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="text">
             <div class="content">
                 <h2>Hello World! <br>
-                    We Are Kaspar We Mack Art</h2>
+                    We Are Kaspar We Make Art</h2>
                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit
                     aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan
                     id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
