--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="CSS/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Nerko+O
@@ -52,7 +52,7 @@
         <div class="overlay"></div>
         <div class="text">
             <div class="content">
-                <h2>Hello Worled! <br>
+                <h2>Hello World! <br>
                     We Are Kaspar We Mack Art</h2>
                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit
                     aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan
